// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner Spinner 是否正确渲染 1`] = `
<div
  className="adui-spinner-nestedWrapper"
  style={null}
>
  <div>
    <div
      className="adui-spinner-base adui-spinner-normal adui-spinner-spinning"
      style={
        Object {
          "color": "#00bb9c",
        }
      }
    >
      <svg
        className="adui-spinner-circular"
        fill="none"
        height={20}
        viewBox="0 0 100 100"
        width={20}
      >
        <circle
          className="adui-spinner-track"
          cx="50%"
          cy="50%"
          r="44"
          strokeWidth={12.5}
        />
        <circle
          className="adui-spinner-head"
          cx="50%"
          cy="50%"
          r="44"
          strokeWidth={12.5}
          style={
            Object {
              "strokeDasharray": "282.743px",
            }
          }
        />
      </svg>
    </div>
  </div>
  <div
    className="adui-spinner-container adui-spinner-blur"
    style={
      Object {
        "minHeight": 200,
      }
    }
  >
    children
  </div>
</div>
`;

exports[`Spinner 各情况快照核对 1`] = `
<div
  className="adui-spinner-base adui-spinner-normal adui-spinner-spinning"
  style={Object {}}
>
  <svg
    className="adui-spinner-circular"
    fill="none"
    height={16}
    viewBox="0 0 100 100"
    width={16}
  >
    <circle
      className="adui-spinner-track"
      cx="50%"
      cy="50%"
      r="44"
      strokeWidth={12.5}
    />
    <circle
      className="adui-spinner-head"
      cx="50%"
      cy="50%"
      r="44"
      strokeWidth={12.5}
      style={
        Object {
          "strokeDasharray": "282.743px",
        }
      }
    />
  </svg>
</div>
`;

exports[`Spinner 各情况快照核对 2`] = `
<div
  className="adui-spinner-base adui-spinner-normal adui-spinner-spinning"
  style={Object {}}
>
  <svg
    className="adui-spinner-circular"
    fill="none"
    height={20}
    viewBox="0 0 100 100"
    width={20}
  >
    <circle
      className="adui-spinner-track"
      cx="50%"
      cy="50%"
      r="44"
      strokeWidth={12.5}
    />
    <circle
      className="adui-spinner-head"
      cx="50%"
      cy="50%"
      r="44"
      strokeWidth={12.5}
      style={
        Object {
          "strokeDasharray": "282.743px",
        }
      }
    />
  </svg>
</div>
`;

exports[`Spinner 各情况快照核对 3`] = `
<div
  className="adui-spinner-base adui-spinner-normal adui-spinner-spinning"
  style={Object {}}
>
  <svg
    className="adui-spinner-circular"
    fill="none"
    height={28}
    viewBox="0 0 100 100"
    width={28}
  >
    <circle
      className="adui-spinner-track"
      cx="50%"
      cy="50%"
      r="44"
      strokeWidth={10.714285714285715}
    />
    <circle
      className="adui-spinner-head"
      cx="50%"
      cy="50%"
      r="44"
      strokeWidth={10.714285714285715}
      style={
        Object {
          "strokeDasharray": "282.743px",
        }
      }
    />
  </svg>
</div>
`;

exports[`Spinner 各情况快照核对 4`] = `
<div
  className="adui-spinner-base adui-spinner-normal adui-spinner-spinning"
  style={Object {}}
>
  <svg
    className="adui-spinner-circular"
    fill="none"
    height={38}
    viewBox="0 0 100 100"
    width={38}
  >
    <circle
      className="adui-spinner-track"
      cx="50%"
      cy="50%"
      r="44"
      strokeWidth={10.526315789473685}
    />
    <circle
      className="adui-spinner-head"
      cx="50%"
      cy="50%"
      r="44"
      strokeWidth={10.526315789473685}
      style={
        Object {
          "strokeDasharray": "282.743px",
        }
      }
    />
  </svg>
</div>
`;

exports[`Spinner 各情况快照核对 5`] = `
<div
  className="adui-spinner-base adui-spinner-normal"
  style={Object {}}
>
  <svg
    className="adui-spinner-circular"
    fill="none"
    height={20}
    viewBox="0 0 100 100"
    width={20}
  >
    <circle
      className="adui-spinner-track"
      cx="50%"
      cy="50%"
      r="44"
      strokeWidth={12.5}
    />
    <circle
      className="adui-spinner-head"
      cx="50%"
      cy="50%"
      r="44"
      strokeWidth={12.5}
      style={
        Object {
          "strokeDasharray": "282.743px",
          "strokeDashoffset": "206.40239px",
        }
      }
    />
  </svg>
  <div
    className="adui-spinner-text"
  >
    指定进度
  </div>
</div>
`;
